# crafting-interpreters

./: Cargo.toml  lox.ebnf
src/: ast_printer.rs  error.rs  expr.rs  gen_ast.rs  interpreter.rs  lexer.rs  lox.rs  main.rs  parser.rs  printer.rs  scanner.rs  statement.rs  token.rs  token_type.rs
src/corpus/: expr.gr  first.lox
src/expr/: binary.rs  grouping.rs  literal.rs  unary.rs
