[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lox"
path = "src/lox.rs"

[dependencies]

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
